--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -43,7 +43,7 @@ a {
 }
 
 .header {
-  border: 1px solid red;
+  /*border: 1px solid red; For visual help*/
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -51,7 +51,7 @@ a {
 }
 
 .footer {
-  border: 1px solid red;
+  /*border: 1px solid red; For visual help*/
   padding: 20px;
   display: flex;
   justify-content: space-between;
